2nd Last Update (BIG)
1. Collision Manager / AABB
- Fixed collision issues with platforms and player
- Added bounding walls to prevent player from walking out of map

2. Physics2D
- Balanced falling physics for player, platform and coin

3. Coin / Platforms
- Added Randomised Spawner Algorithm for both objects.
- Added life time to handle auto-destruction.

4. Player Input Controller
- Fixed issues with detecting multi-finger input.
- Buttons now react more responsive to player.

5.  Audio Manager
- Audio Manager is now a Singleton Class.
- Vibration is now working even in older platforms.
- Audio Manager can now be played even outside Game Scenes.
- More Error checking on development part.
- Added Resume, Pause and Stop functionality.

6. New Save System and Settings (Singleton)
- Score is now saved and displayed at game over.
- Audio Settings implemented to adjust volume within application.

7. UI Pages & Layouts
- Added Game Over Page
- Added Audio Settings Page
- Added Help Page
- App now launch with custom splash art and has unique icon.
- App name now displays as Trashio on Phone.

8. Optimization & Crash Fixes
- Fixed issues regarding media player memory leak.
- Fixed Game Scene properly destroying game objects on exit.
- All Game Scene Entry and Exit points now properly perform their create and destroy functions.
- Cleaned up most of the codebase.

(I finally understood how Android Studio and this framework works :OO)

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/blank_bg">
 
-    <EditText
-        android:id="@+id/editTextText"
+    <TextView
+        android:id="@+id/main_menu_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
@@ -17,7 +17,6 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-black"
-        android:inputType="text"
         android:text="@string/game_title"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -27,33 +26,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="LabelFor"
-        tools:text="Trashio" />
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/start_button"
-        android:layout_width="260dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="49dp"
         android:backgroundTint="#539E40"
         android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="80dp"
+        android:paddingVertical="20dp"
         android:text="@string/start_button_text"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@id/settings_button"
+        app:layout_constraintBottom_toTopOf="@+id/settings_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_header"
         app:strokeColor="#FFFFFF" />
 
     <Button
         android:id="@+id/settings_button"
-        android:layout_width="260dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="49dp"
         android:backgroundTint="#A26216"
         android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="40dp"
+        android:paddingVertical="20dp"
         android:text="@string/settings_button_text"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
@@ -65,11 +71,15 @@
 
     <Button
         android:id="@+id/help_button"
-        android:layout_width="260dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="162dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="229dp"
         android:backgroundTint="#4676A6"
         android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="75dp"
+        android:paddingVertical="20dp"
         android:text="@string/help_button_text"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -77,6 +87,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settings_button" />
+        app:layout_constraintTop_toBottomOf="@+id/settings_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
