Final Update [UI] (Hopefully)
1. GUI Interface
- Added both inactive and active version of player buttons

2. Audio & Haptic Feedback
- Added button sound
- Added jump sound
- Added pause sound
- Added Game Over sound
- Added coin collected sound
- Haptic Feedback enabled on player controls.

3. Background & Menu Buttons
- New night sky background in menu and in-game
- Visual feedback on button pressed.

4. Clean up
- Added a lot of comments in code
- Removed some unused sprite & sound assets.

--- a/app/src/main/res/layout/game_over_page.xml
+++ b/app/src/main/res/layout/game_over_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#14141D"
+    android:background="@drawable/bg_menu"
     android:visibility="visible">
 
     <TextView
@@ -22,23 +22,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/game_over_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:background="#664141"
-        android:paddingHorizontal="10dp"
-        android:text="@string/game_over_back_text"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/game_over_score"
-        app:strokeColor="#FFFFFF" />
-
     <TextView
         android:id="@+id/game_over_score"
         android:layout_width="wrap_content"
@@ -54,5 +37,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/game_over_header" />
+
+    <Button
+        android:id="@+id/game_over_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="27dp"
+        android:backgroundTint="#664141"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/settings_back_text"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="normal|bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_over_score" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
