--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/blank_bg">
+    android:background="@drawable/bg_menu">
 
     <TextView
         android:id="@+id/settings_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="123dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginBottom="127dp"
         android:fontFamily="sans-serif"
         android:text="@string/settings_header_text"
         android:textAlignment="center"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="17dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -68,7 +68,7 @@
         android:id="@+id/master_sfx_slider"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="29dp"
         android:hapticFeedbackEnabled="true"
         android:max="100"
         android:min="0"
@@ -86,7 +86,7 @@
         android:id="@+id/master_bgm_slider"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="306dp"
+        android:layout_marginBottom="210dp"
         android:hapticFeedbackEnabled="true"
         android:max="100"
         android:min="0"
@@ -95,22 +95,22 @@
         android:progressTint="#00FF4E"
         android:thumbTint="#FFFFFF"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/settings_back"
+        app:layout_constraintBottom_toTopOf="@+id/game_over_back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_master_bgm" />
 
     <Button
-        android:id="@+id/settings_back"
+        android:id="@+id/game_over_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="108dp"
-        android:backgroundTint="#005FCE"
+        android:layout_marginBottom="187dp"
+        android:backgroundTint="#216EC7"
         android:fontFamily="sans-serif-black"
         android:text="@string/settings_back_text"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
