--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -7,11 +7,10 @@
     android:background="@drawable/bg_menu">
 
     <TextView
-        android:id="@+id/settings_header"
+        android:id="@+id/shop_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginBottom="127dp"
+        android:layout_marginBottom="19dp"
         android:fontFamily="sans-serif"
         android:text="@string/settings_header_text"
         android:textAlignment="center"
@@ -21,15 +20,14 @@
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/settings_master_sfx"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/settings_master_sfx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="152dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -39,9 +37,8 @@
         android:textSize="34sp"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/master_sfx_slider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_header"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="LabelFor" />
 
     <TextView
@@ -49,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="29dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -59,7 +56,6 @@
         android:textSize="34sp"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/master_bgm_slider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/master_sfx_slider"
         tools:ignore="LabelFor" />
@@ -68,7 +64,7 @@
         android:id="@+id/master_sfx_slider"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="29dp"
+        android:layout_marginTop="21dp"
         android:hapticFeedbackEnabled="true"
         android:max="100"
         android:min="0"
@@ -77,7 +73,6 @@
         android:progressTint="#00FF4E"
         android:thumbTint="#FFFFFF"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/settings_master_bgm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_master_sfx" />
@@ -86,7 +81,7 @@
         android:id="@+id/master_bgm_slider"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="210dp"
+        android:layout_marginTop="18dp"
         android:hapticFeedbackEnabled="true"
         android:max="100"
         android:min="0"
@@ -95,7 +90,6 @@
         android:progressTint="#00FF4E"
         android:thumbTint="#FFFFFF"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/game_over_back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_master_bgm" />
@@ -104,7 +98,7 @@
         android:id="@+id/game_over_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="187dp"
+        android:layout_marginBottom="111dp"
         android:backgroundTint="#216EC7"
         android:fontFamily="sans-serif-black"
         android:text="@string/settings_back_text"
@@ -115,7 +109,6 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/master_bgm_slider" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
