--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -11,9 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="56dp"
         android:layout_marginEnd="6dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="21dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-black"
@@ -32,8 +31,6 @@
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="75dp"
         android:layout_marginBottom="49dp"
         android:backgroundTint="#539E40"
         android:fontFamily="sans-serif-medium"
@@ -53,9 +50,7 @@
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="49dp"
+        android:layout_marginBottom="58dp"
         android:backgroundTint="#A26216"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="40dp"
@@ -63,7 +58,7 @@
         android:text="@string/settings_button_text"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/help_button"
+        app:layout_constraintBottom_toTopOf="@+id/Leaderboard_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_button"
@@ -73,9 +68,7 @@
         android:id="@+id/help_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="229dp"
+        android:layout_marginBottom="25dp"
         android:backgroundTint="#4676A6"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="75dp"
@@ -85,6 +78,26 @@
         android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Leaderboard_button" />
+
+    <Button
+        android:id="@+id/Leaderboard_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="58dp"
+        android:backgroundTint="#EFCD8DDB"
+        android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="75dp"
+        android:paddingVertical="20dp"
+        android:text="Leaderboard"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/help_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_button" />
