--- a/app/src/main/res/layout/help_page.xml
+++ b/app/src/main/res/layout/help_page.xml
@@ -43,6 +43,48 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/help_page_description_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="14dp"
+                android:layout_marginBottom="60dp"
+                android:fontFamily="sans-serif"
+                android:text="@string/help_page_description_1_text"
+                android:textAlignment="textStart"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/help_page_description_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="62dp"
+                android:fontFamily="sans-serif"
+                android:text="@string/help_page_description_2_text"
+                android:textAlignment="textStart"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/help_page_description_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="13dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginBottom="181dp"
+                android:fontFamily="sans-serif"
+                android:text="@string/help_page_description_3_text"
+                android:textAlignment="textStart"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:visibility="visible" />
+
+            <TextView
                 android:id="@+id/help_page_description_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
