--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -11,8 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="6dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="24dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-black"
@@ -31,7 +32,7 @@
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="49dp"
+        android:layout_marginBottom="53dp"
         android:backgroundTint="#539E40"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="80dp"
@@ -50,7 +51,7 @@
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="58dp"
+        android:layout_marginBottom="61dp"
         android:backgroundTint="#A26216"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="40dp"
@@ -68,7 +69,7 @@
         android:id="@+id/help_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="28dp"
         android:backgroundTint="#4676A6"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="75dp"
@@ -86,14 +87,14 @@
         android:id="@+id/Leaderboard_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="58dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="61dp"
         android:backgroundTint="#EFCD8DDB"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="75dp"
         android:paddingVertical="20dp"
-        android:text="Leaderboard"
+        android:text="Leader"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
