--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -8,12 +8,10 @@
 
     <TextView
         android:id="@+id/main_menu_header"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
         android:layout_marginTop="3dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="18dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-black"
@@ -22,85 +20,86 @@
         android:textColor="#FFFFFF"
         android:textColorLink="#FF5252"
         android:textSize="96sp"
-        app:layout_constraintBottom_toTopOf="@+id/start_button"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="LabelFor" />
 
-    <Button
-        android:id="@+id/start_button"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="53dp"
-        android:backgroundTint="#539E40"
-        android:fontFamily="sans-serif-medium"
-        android:paddingHorizontal="80dp"
-        android:paddingVertical="20dp"
-        android:text="@string/start_button_text"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/settings_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_header"
-        app:strokeColor="#FFFFFF" />
-
-    <Button
-        android:id="@+id/settings_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="61dp"
-        android:backgroundTint="#A26216"
-        android:fontFamily="sans-serif-medium"
-        android:paddingHorizontal="40dp"
-        android:paddingVertical="20dp"
-        android:text="@string/settings_button_text"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/Leaderboard_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_button"
-        tools:ignore="TextSizeCheck" />
-
-    <Button
-        android:id="@+id/help_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:backgroundTint="#4676A6"
-        android:fontFamily="sans-serif-medium"
-        android:paddingHorizontal="75dp"
-        android:paddingVertical="20dp"
-        android:text="@string/help_button_text"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="81dp"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Leaderboard_button" />
+        app:layout_constraintTop_toBottomOf="@+id/main_menu_header">
 
-    <Button
-        android:id="@+id/Leaderboard_button"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="61dp"
-        android:backgroundTint="#EFCD8DDB"
-        android:fontFamily="sans-serif-medium"
-        android:paddingHorizontal="75dp"
-        android:paddingVertical="20dp"
-        android:text="Leader"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/help_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_button" />
+        <Button
+            android:id="@+id/start_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#539E40"
+            android:fontFamily="sans-serif-medium"
+            android:paddingHorizontal="80dp"
+            android:paddingVertical="20dp"
+            android:text="@string/start_button_text"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp"
+            app:strokeColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#A26216"
+            android:fontFamily="sans-serif-medium"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="20dp"
+            android:text="@string/settings_button_text"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp"
+            tools:ignore="TextSizeCheck" />
+
+        <Button
+            android:id="@+id/Leaderboard_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#EF752D83"
+            android:fontFamily="sans-serif-medium"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="30dp"
+            android:text="@string/leaderboard_button_text"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/help_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#4676A6"
+            android:fontFamily="sans-serif-medium"
+            android:paddingHorizontal="80dp"
+            android:paddingVertical="20dp"
+            android:text="@string/help_button_text"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
