--- a/app/src/main/res/layout/leaderboard_page.xml
+++ b/app/src/main/res/layout/leaderboard_page.xml
@@ -10,8 +10,9 @@
         android:id="@+id/editTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="17dp"
         android:ems="10"
         android:inputType="text"
         android:minHeight="48dp"
@@ -20,57 +21,43 @@
         android:textColorLink="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/leaderboard_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill,HardcodedText,LabelFor" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <TextView
+        android:id="@+id/leaderboard_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_gravity="center"
+        android:layout_marginBottom="37dp"
+        android:background="#000000"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/leaderboard_back_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        app:layout_constraintVertical_bias="1.0">
+        tools:ignore="HardcodedText" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/leaderboard_content"
-                android:layout_width="match_parent"
-                android:layout_height="565dp"
-                android:layout_gravity="center"
-                android:background="#000000"
-                android:text="Leaderboard Example"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
-
-            <Button
-                android:id="@+id/leaderboard_back_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="0dp"
-                android:backgroundTint="#4676A6"
-                android:fontFamily="sans-serif-medium"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="5dp"
-                android:text="@string/leaderboard_back_text"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
-
-        </LinearLayout>
-    </ScrollView>
+    <Button
+        android:id="@+id/leaderboard_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="14dp"
+        android:backgroundTint="#4676A6"
+        android:fontFamily="sans-serif-medium"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="5dp"
+        android:text="@string/leaderboard_back_text"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/leaderboard_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
