--- a/app/src/main/res/layout/leaderboard_page.xml
+++ b/app/src/main/res/layout/leaderboard_page.xml
@@ -10,9 +10,8 @@
         android:id="@+id/editTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="9dp"
         android:ems="10"
         android:inputType="text"
         android:minHeight="48dp"
@@ -21,56 +20,45 @@
         android:textColorLink="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/leaderboard_content"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill,HardcodedText,LabelFor" />
 
-    <TextView
-        android:id="@+id/leaderboard_content"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="37dp"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/leaderboard_back_button"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextText">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/leaderboard_content"
             android:layout_width="match_parent"
+            android:layout_height="565dp"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/leaderboard_back_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:layout_marginBottom="0dp"
+            android:backgroundTint="#4676A6"
+            android:fontFamily="sans-serif-medium"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="5dp"
+            android:text="@string/leaderboard_back_text"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/leaderboard_content"
-                android:layout_width="match_parent"
-                android:layout_height="565dp"
-                android:layout_gravity="center"
-                android:background="#000000"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"/>
-
-            <Button
-                android:id="@+id/leaderboard_back_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="0dp"
-                android:backgroundTint="#4676A6"
-                android:fontFamily="sans-serif-medium"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="5dp"
-                android:text="@string/leaderboard_back_text"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
-
-        </LinearLayout>
-    </ScrollView>
-
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
