--- a/app/src/main/res/layout/leaderboard_page.xml
+++ b/app/src/main/res/layout/leaderboard_page.xml
@@ -52,7 +52,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="0dp"
             android:backgroundTint="#4676A6"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-black"
             android:paddingHorizontal="20dp"
             android:paddingVertical="5dp"
             android:text="@string/leaderboard_back_text"
