--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -8,10 +8,9 @@
 
     <TextView
         android:id="@+id/main_menu_header"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginTop="75dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-black"
@@ -20,35 +19,32 @@
         android:textColor="#FFFFFF"
         android:textColorLink="#FF5252"
         android:textSize="96sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="LabelFor" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="292dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="81dp"
+        android:layout_marginBottom="82dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_menu_header">
+        app:layout_constraintEnd_toEndOf="@+id/main_menu_header"
+        app:layout_constraintStart_toStartOf="@+id/main_menu_header">
 
         <Button
             android:id="@+id/start_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#539E40"
-            android:fontFamily="sans-serif-medium"
-            android:paddingHorizontal="80dp"
-            android:paddingVertical="20dp"
+            android:backgroundTint="#508A3F"
+            android:fontFamily="sans-serif-black"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="30dp"
             android:text="@string/start_button_text"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -58,43 +54,43 @@
         <Button
             android:id="@+id/settings_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#A26216"
-            android:fontFamily="sans-serif-medium"
+            android:backgroundTint="#975D1A"
+            android:fontFamily="sans-serif-black"
             android:paddingHorizontal="40dp"
-            android:paddingVertical="20dp"
+            android:paddingVertical="30dp"
             android:text="@string/settings_button_text"
             android:textColor="#FFFFFF"
             android:textSize="34sp"
             tools:ignore="TextSizeCheck" />
 
         <Button
-            android:id="@+id/Leaderboard_button"
+            android:id="@+id/other_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#EF752D83"
-            android:fontFamily="sans-serif-medium"
+            android:backgroundTint="#EF6A2A76"
+            android:fontFamily="sans-serif-black"
             android:paddingHorizontal="40dp"
             android:paddingVertical="30dp"
-            android:text="@string/leaderboard_button_text"
+            android:text="@string/other_button_text"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="24sp" />
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/help_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="#4676A6"
-            android:fontFamily="sans-serif-medium"
-            android:paddingHorizontal="80dp"
-            android:paddingVertical="20dp"
+            android:backgroundTint="#426C92"
+            android:fontFamily="sans-serif-black"
+            android:paddingHorizontal="40dp"
+            android:paddingVertical="30dp"
             android:text="@string/help_button_text"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
