--- a/app/src/main/res/layout/help_page.xml
+++ b/app/src/main/res/layout/help_page.xml
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         android:backgroundTint="#3D69A8"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="sans-serif-black"
         android:text="@string/settings_back_text"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
